# DEDS_Portfolio

./: opdracht1.docx  pyproject.toml
AI_C#/: AI_C#.csproj  Program.cs
AI_C#/src/: Create3rowDataset.cs  Create5rowDataset.cs  NeuralNetwork.cs
UML/Week_2/: Source Data Model Sign.vpp  Source Data Model Sign.vpp.bak2  Source Data Model Sign.vpp.bak5  Source Data Model Sign.vpp.bak6  Source Data Model Sign.vpp.bak7  Source Data Model Sign.vpp.bak_000f  Source Data Model Sign.vpp.bak_001d  Source Data Model Sign.vpp.bak_002d  Source Data Model Sign.vpp.bak_003d  Source Data Model Sign.vpp.bak_004d  Source Data Model Sign.vpp.bak_005d  Source Data Model Sign.vpp.bak_006d  Source Data Model Sign.vpp.bak_007d  Source Data Model Sign.vpp.bak_008d  Source Data Model Sign.vpp.bak_009d  Source Data Model Sign.vpp.bak_010d  Source Data Model Sign.vpp.bak_011d  Source Data Model Sign.vpp.bak_012d  Source Data Model Sign.vpp.bak_013d  Source Data Model Sign.vpp.bak_014d  Source Data Model Sign.vpp.bak_015d  Source Data Model Sign.vpp.bak_016d  go_crm_databasemodel.vpp  go_crm_databasemodel.vpp.bak_000f  go_crm_databasemodel.vpp.bak_001d  go_sales_train_databasemodel.vpp  go_sales_train_databasemodel.vpp.bak_000f  go_sales_train_databasemodel.vpp.bak_001d  go_sales_train_databasemodel.vpp.bak_002d  (+5 more)
dashbords/: GREAT_OUTDOORS_DASHBORD.pbix
docs/: DATA_DUMP_LIST.txt  DEDS-WC-3.1 Opdrachten(1).docx  ~$DS-WC-3.1 Opdrachten(1).docx
src/: DEDS_WC_1.1a_Opdrachten.ipynb  DEDS_WC_1.1b_Opdrachten.ipynb  DEDS_WC_1.2_en_1.3_Opdrachten.ipynb  Script.ipynb  main.py  script.py  settings.py
(+56 files in other folders)
