[project]
name = "DEDS_Portfolio"
version = "0.1.0"
description = "Portfolio for DEDS"
authors = [
    {name = "Jarno Vis", email = "84909095+Jarnovis@users.noreply.github.com"},
]
dependencies = ["ipykernel>=6.29.5", "pandas>=2.2.3", "loguru>=0.7.3", "openpyxl>=3.1.5"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
